@@ -3,12 +3,15 @@ package cv.inps.rh.avaliacao.application.services;
 import com.github.f4b6a3.uuid.UuidCreator;
 import cv.inps.rh.avaliacao.application.commands.DefinicaoObjetivoCommand;
 import cv.inps.rh.avaliacao.application.dto.DefinicaoObjectivoDTO;
+import cv.inps.rh.avaliacao.application.dto.PeriodoResumoDTO;
 import cv.inps.rh.avaliacao.application.dto.WrapperListaAvaliacaoDTO;
 import cv.inps.rh.avaliacao.application.dto.WrapperListaDefinicaoObjetivoDTO;
 import cv.inps.rh.avaliacao.application.queries.GetListaAvaliacaoQuery;
 import cv.inps.rh.avaliacao.application.queries.GetListaDefinicaoObjectivosQuery;
 import cv.inps.rh.avaliacao.infrastructure.mappers.AvaliacaoListagemMapper;
 import cv.inps.rh.avaliacao.infrastructure.mappers.AvaliacaoMapper;
+import cv.inps.rh.shared.application.constants.AbrangenciaAvaliacao;
+import cv.inps.rh.shared.application.dto.SuccessResponseDTO;
 import cv.inps.rh.shared.domain.exceptions.IgrpResponseStatusException;
 import cv.inps.rh.shared.infrastructure.persistence.entity.*;
 import cv.inps.rh.shared.infrastructure.persistence.repository.*;
@@ -28,6 +31,8 @@ import org.springframework.util.StringUtils;
 
 import java.math.BigDecimal;
 import java.util.*;
+import java.util.LinkedHashSet;
+import java.util.Comparator;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 
@@ -50,6 +55,8 @@ public class AvaliacaoService {
   private final ParamEscalaAvaliacaoEntityRepository escalaAvaliacaoRepository;
   private final AvaliacaoMapper avaliacaoMapper;
   private final AvaliacaoListagemMapper avaliacaoListagemMapper;
+  private final AvaliacaoPeriodoService periodoService;
+  private final RhVRelacaoLaboralEntityRepository relacaoLaboralRepository;
 
   public AvaliacaoService(
       AvaliacaoEntityRepository avaliacaoRepository,
@@ -65,7 +72,9 @@ public class AvaliacaoService {
       ParamManualFuncaoEntityRepository manualFuncaoRepository,
       ParamEscalaAvaliacaoEntityRepository escalaAvaliacaoRepository,
       AvaliacaoMapper avaliacaoMapper,
-      AvaliacaoListagemMapper avaliacaoListagemMapper) {
+      AvaliacaoListagemMapper avaliacaoListagemMapper,
+      AvaliacaoPeriodoService periodoService,
+      RhVRelacaoLaboralEntityRepository relacaoLaboralRepository) {
     this.avaliacaoRepository = avaliacaoRepository;
     this.objectivoRepository = objectivoRepository;
     this.competenciaRepository = competenciaRepository;
@@ -80,22 +89,25 @@ public class AvaliacaoService {
     this.escalaAvaliacaoRepository = escalaAvaliacaoRepository;
     this.avaliacaoMapper = avaliacaoMapper;
     this.avaliacaoListagemMapper = avaliacaoListagemMapper;
+    this.periodoService = periodoService;
+    this.relacaoLaboralRepository = relacaoLaboralRepository;
   }
 
   @Transactional
-  public ResponseEntity<Map<String, ?>> definicaoObjetivos(DefinicaoObjetivoCommand command) {
+  public ResponseEntity<SuccessResponseDTO> definicaoObjetivos(DefinicaoObjetivoCommand command) {
 
     var dto = command.getDefinicaoobjectivo();
 
-    if (!StringUtils.hasText(dto.getSemestre()) || (!"1".equals(dto.getSemestre()) && !"2".equals(dto.getSemestre()))) {
-      throw IgrpResponseStatusException.badRequest("semestre deve ser '1' ou '2'");
-    }
+    // Sem abrangência assume-se INDIVIDUAL: é o comportamento anterior ao refactor.
+    var abrangencia = StringUtils.hasText(dto.getAbrangencia())
+        ? AbrangenciaAvaliacao.fromValorOrThrow(dto.getAbrangencia())
+        : AbrangenciaAvaliacao.INDIVIDUAL;
+
+    var periodos = resolverPeriodos(dto);
 
     var det = objetivoDetRepository.findTopByAnoOrderByIdDesc(dto.getAno())
         .orElseThrow(() -> IgrpResponseStatusException.of(HttpStatus.NOT_FOUND,
             "ParamObjetivoDetEntity not found for ano: " + dto.getAno()));
-
-    var instit = instituicaoRepository.findByIdOrThrow(dto.getInstitId());
 
     var secao = dto.getSeccaoId() != null
         ? secaoRepository.findByIdOrThrow(dto.getSeccaoId())
@@ -111,45 +123,168 @@ public class AvaliacaoService {
         ? carreiraRepository.findByIdOrThrow(dto.getCarrPccsId())
         : null;
 
-    var created = new ArrayList<String>(dto.getFunUuids().size());
-
     var mapParamObjectives = det.getObjetivos().stream()
         .collect(Collectors.toMap(ParamObjetivoEntity::getId, Function.identity()));
 
-    for (var funId : dto.getFunUuids()) {
+    var created = new ArrayList<String>();
+    var alertas = new ArrayList<String>();
 
-      if (avaliacaoRepository.existsByFuncionario_UuidAndAnoAndSemestre(funId, dto.getAno(), dto.getSemestre())) {
+    if (!abrangencia.exigeColaborador()) {
+      // Objectivos comuns: sem colaborador. INPS dá uma linha; DIRECAO dá uma por direção,
+      // porque o ecrã permite juntar várias direções na mesma gravação.
+      for (var instit : resolverDirecoes(dto, abrangencia)) {
+        var institId = instit != null ? instit.getId() : null;
+
+        // Reenviar o mesmo formulário não pode duplicar objectivos: se já existir a
+        // avaliação comum deste ano/abrangência/direção, só se acrescentam os períodos.
+        var existente = avaliacaoRepository
+            .findComuns(dto.getAno(), abrangencia.name(), institId)
+            .stream().findFirst().orElse(null);
+
+        if (existente != null) {
+          periodos.forEach(pp -> periodoService.obterOuCriarDetalhe(existente, pp));
+          alertas.add("Já existiam objectivos " + abrangencia.name()
+              + (instit != null ? " da direção " + instit.getNome() : "")
+              + " no ano " + dto.getAno() + "; foram apenas acrescentados os períodos.");
+          created.add(existente.getUuid().toString());
+          continue;
+        }
+
+        var avaliacao = novaAvaliacao(dto, abrangencia, null, instit, secao, cargo, carreira, det);
+        avaliacaoRepository.save(avaliacao);
+        criarLinhasAvaliacao(avaliacao, det.getObjetivos(), mapParamObjectives, dto, det,
+            resolverDescricaoManual(institId, dto.getSeccaoId(), dto.getCargoId(), dto.getCarrPccsId()));
+        periodos.forEach(pp -> periodoService.obterOuCriarDetalhe(avaliacao, pp));
+        created.add(avaliacao.getUuid().toString());
+      }
+
+      var respostaComuns = sucesso(created, "Objectivos comuns (" + abrangencia.name()
+          + ") definidos em " + created.size() + " registo(s) para "
+          + String.join(", ", periodos) + ".");
+      alertas.forEach(a -> respostaComuns.getBody().getAlertas().add(a));
+      return respostaComuns;
+    }
+
+    if (dto.getFunUuids() == null || dto.getFunUuids().isEmpty()) {
+      throw IgrpResponseStatusException.badRequest(
+          "A abrangência INDIVIDUAL exige pelo menos um colaborador.");
+    }
+
+    var instit = dto.getInstitId() != null ? instituicaoRepository.findByIdOrThrow(dto.getInstitId()) : null;
+    var ignorados = new ArrayList<String>();
+
+    for (var funUuid : dto.getFunUuids()) {
+
+      var funcionario = funcionarioRepository.findByUuidOrThrow(funUuid);
+
+      // O ciclo é por ano, não por período: se já existir avaliação do colaborador nesse ano,
+      // os períodos novos acrescentam-se a ela em vez de criar um registo duplicado.
+      var existente = avaliacaoRepository.findAllByFuncionario_IdAndAno(funcionario.getId(), dto.getAno())
+          .stream().findFirst().orElse(null);
+
+      if (existente != null) {
+        periodos.forEach(pp -> periodoService.obterOuCriarDetalhe(existente, pp));
+        ignorados.add(funcionario.getNome());
         continue;
       }
 
-      var funcionario = funcionarioRepository.findByUuidOrThrow(funId);
-
-      var avaliacao = new AvaliacaoEntity();
-      avaliacao.setUuid(UuidCreator.getTimeOrderedEpoch());
-      avaliacao.setFuncionario(funcionario);
-      avaliacao.setAno(dto.getAno());
-      avaliacao.setSemestre(dto.getSemestre());
-      avaliacao.setInstitId(instit);
-      avaliacao.setSeccaoId(secao);
-      avaliacao.setCargo(cargo);
-      avaliacao.setCarreira(carreira);
-      avaliacao.setEstado(ESTADO_ATIVO);
-      avaliacao.setPesoComportamentais(det.getPesoComportamentais());
-      avaliacao.setPesoTecnica(det.getPesoTecnica());
-
+      var avaliacao = novaAvaliacao(dto, abrangencia, funcionario, instit, secao, cargo, carreira, det);
       avaliacaoRepository.save(avaliacao);
-
-      criarLinhasAvaliacao(
-          avaliacao,
-          det.getObjetivos(),
-          mapParamObjectives, dto, det
-      );
+      criarLinhasAvaliacao(avaliacao, det.getObjetivos(), mapParamObjectives, dto, det,
+          resolverDescricaoManual(instit != null ? instit.getId() : null,
+              dto.getSeccaoId(), cargoDoColaborador(funUuid, dto.getCargoId()), dto.getCarrPccsId()));
+      periodos.forEach(pp -> periodoService.obterOuCriarDetalhe(avaliacao, pp));
 
       created.add(avaliacao.getUuid().toString());
     }
 
-    return ResponseEntity.ok(Map.of(
-        "ids", created));
+    var resposta = sucesso(created, created.size() + " objectivo(s) definido(s) para "
+        + String.join(", ", periodos) + ".");
+    if (!ignorados.isEmpty()) {
+      resposta.getBody().getAlertas().add(
+          "Já existia definição no ano " + dto.getAno() + " para: " + String.join(", ", ignorados)
+              + ". Foram apenas acrescentados os períodos " + String.join(", ", periodos) + ".");
+    }
+    alertas.forEach(a -> resposta.getBody().getAlertas().add(a));
+    return resposta;
+  }
+
+  /**
+   * Os períodos a definir. O ecrã dos objectivos comuns é multiselect e o do registo
+   * individual é um select simples, por isso aceita-se a lista ou o campo singular.
+   * Todos são validados contra o ciclo parametrizado no ano.
+   */
+  private List<String> resolverPeriodos(DefinicaoObjectivoDTO dto) {
+    var pedidos = dto.getPeriodicidades() != null && !dto.getPeriodicidades().isEmpty()
+        ? dto.getPeriodicidades()
+        : (StringUtils.hasText(dto.getPeriodicidade()) ? List.of(dto.getPeriodicidade()) : List.<String>of());
+
+    if (pedidos.isEmpty()) {
+      throw IgrpResponseStatusException.badRequest(
+          "É obrigatório indicar pelo menos um período (periodicidade ou periodicidades).");
+    }
+
+    var validados = new LinkedHashSet<String>();
+    pedidos.forEach(pp -> validados.add(periodoService.validarPeriodo(dto.getAno(), pp)));
+    return List.copyOf(validados);
+  }
+
+  /**
+   * As direções a abranger. INPS não tem nenhuma (uma linha com INSTIT_ID nulo);
+   * DIRECAO exige pelo menos uma e aceita várias, porque o ecrã tem
+   * "+ Adicionar Direção à Lista".
+   */
+  private List<DirecaoEntity> resolverDirecoes(DefinicaoObjectivoDTO dto, AbrangenciaAvaliacao abrangencia) {
+    if (abrangencia != AbrangenciaAvaliacao.DIRECAO) {
+      return java.util.Collections.singletonList(null);
+    }
+
+    var ids = new LinkedHashSet<Long>();
+    if (dto.getInstitIds() != null) {
+      dto.getInstitIds().stream().filter(java.util.Objects::nonNull).forEach(ids::add);
+    }
+    if (dto.getInstitId() != null) {
+      ids.add(dto.getInstitId());
+    }
+    if (ids.isEmpty()) {
+      throw IgrpResponseStatusException.badRequest(
+          "A abrangência DIRECAO exige pelo menos uma direção (institId ou institIds).");
+    }
+
+    return ids.stream().map(instituicaoRepository::findByIdOrThrow).toList();
+  }
+
+  private AvaliacaoEntity novaAvaliacao(
+      DefinicaoObjectivoDTO dto,
+      AbrangenciaAvaliacao abrangencia,
+      FuncionarioEntity funcionario,
+      DirecaoEntity instit,
+      SecaoEntity secao,
+      ParamCargoEntity cargo,
+      ParamCarreiraEntity carreira,
+      ParamObjetivoDetEntity det) {
+
+    var avaliacao = new AvaliacaoEntity();
+    avaliacao.setUuid(UuidCreator.getTimeOrderedEpoch());
+    avaliacao.setFuncionario(funcionario);
+    avaliacao.setAno(dto.getAno());
+    avaliacao.setAbrangencia(abrangencia.name());
+    avaliacao.setInstitId(instit);
+    avaliacao.setSeccaoId(secao);
+    avaliacao.setCargo(cargo);
+    avaliacao.setCarreira(carreira);
+    avaliacao.setEstado(ESTADO_ATIVO);
+    avaliacao.setPesoComportamentais(det.getPesoComportamentais());
+    avaliacao.setPesoTecnica(det.getPesoTecnica());
+    return avaliacao;
+  }
+
+  private ResponseEntity<SuccessResponseDTO> sucesso(List<String> ids, String mensagem) {
+    var dto = new SuccessResponseDTO();
+    dto.setSucesso(true);
+    dto.setId(ids.isEmpty() ? null : String.join(",", ids));
+    dto.setMensagem(mensagem);
+    return ResponseEntity.ok(dto);
   }
 
   @Transactional(readOnly = true)
@@ -174,8 +309,12 @@ public class AvaliacaoService {
       if (query.getAno() != null) {
         predicates.add(cb.equal(root.get("ano"), query.getAno()));
       }
-      if (StringUtils.hasText(query.getSemestre())) {
-        predicates.add(cb.equal(root.get("semestre"), query.getSemestre()));
+      if (StringUtils.hasText(query.getAbrangencia())) {
+        predicates.add(cb.equal(cb.upper(root.get("abrangencia")),
+            query.getAbrangencia().trim().toUpperCase()));
+      }
+      if (query.getSeccaoId() != null) {
+        predicates.add(cb.equal(root.get("seccaoId").get("id"), query.getSeccaoId()));
       }
       if (StringUtils.hasText(query.getEstado())) {
         predicates.add(cb.equal(root.get("estado"), query.getEstado()));
@@ -197,7 +336,17 @@ public class AvaliacaoService {
 
     var response = new WrapperListaDefinicaoObjetivoDTO();
     cv.inps.rh.shared.util.PageMapper.fillPagination(page, response);
-    response.setContent(page.getContent().stream().map(avaliacaoMapper::toResumo).toList());
+    // Um único select para os períodos de toda a página.
+    var periodosPorAvd = periodoService
+        .detalhesDe(page.getContent().stream().map(AvaliacaoEntity::getId).toList())
+        .stream()
+        .collect(Collectors.groupingBy(d -> d.getAvaliacao().getId(),
+            Collectors.mapping(AvaliacaoDetalheEntity::getPeriodicidade, Collectors.toList())));
+
+    response.setContent(page.getContent().stream()
+        .map(a -> avaliacaoMapper.toResumo(a,
+            periodosPorAvd.getOrDefault(a.getId(), List.of()).stream().sorted().toList()))
+        .toList());
     return response;
   }
 
@@ -235,8 +384,14 @@ public class AvaliacaoService {
       if (query.getCarreiraId() != null) {
         predicates.add(cb.equal(root.get("carreira").get("id"), query.getCarreiraId()));
       }
-      if (StringUtils.hasText(query.getSemestre())) {
-        predicates.add(cb.equal(root.get("semestre"), query.getSemestre()));
+      if (StringUtils.hasText(query.getPeriodicidade())) {
+        // O período vive em RH_T_AVD_DETALHE: filtra-se por existência do detalhe.
+        var sub = cq.subquery(Long.class);
+        var det = sub.from(AvaliacaoDetalheEntity.class);
+        sub.select(cb.literal(1L)).where(
+            cb.equal(det.get("avaliacao").get("id"), root.get("id")),
+            cb.equal(cb.upper(det.get("periodicidade")), query.getPeriodicidade().trim().toUpperCase()));
+        predicates.add(cb.exists(sub));
       }
       if (StringUtils.hasText(query.getColaborador())) {
         var raw = query.getColaborador().trim();
@@ -271,28 +426,69 @@ public class AvaliacaoService {
 
     var escala = escalaAvaliacaoRepository.findAll();
 
+    // Um único select para os detalhes de todas as avaliações da página.
+    var detalhesPorAvd = periodoService
+        .detalhesDe(rows.stream().map(AvaliacaoEntity::getId).toList())
+        .stream()
+        .collect(Collectors.groupingBy(d -> d.getAvaliacao().getId()));
+
+    var rotulos = periodoService.descricoesDosPeriodos();
+
     var contentAll = grouped.values().stream().map(list -> {
       var base = list.getFirst();
-      BigDecimal s1 = null;
-      BigDecimal s2 = null;
-      for (var a : list) {
-        if ("1".equals(a.getSemestre()) && a.getAvaliacaoFinal() != null) {
-          s1 = BigDecimal.valueOf(a.getAvaliacaoFinal());
-        } else if ("2".equals(a.getSemestre()) && a.getAvaliacaoFinal() != null) {
-          s2 = BigDecimal.valueOf(a.getAvaliacaoFinal());
-        }
+
+      var detalhes = list.stream()
+          .flatMap(a -> detalhesPorAvd.getOrDefault(a.getId(), List.<AvaliacaoDetalheEntity>of()).stream())
+          .toList();
+
+      // A ordem dos períodos é a do ciclo, não a de inserção; sem parametrização
+      // no ano não há ciclo conhecido e mostram-se os detalhes como estão.
+      List<AvaliacaoDetalheEntity> ordenados;
+      Map<String, BigDecimal> ponderacoes;
+      try {
+        var tipo = periodoService.tipoDoAno(base.getAno());
+        var ordem = tipo.periodos();
+        ordenados = detalhes.stream()
+            .sorted(Comparator.comparingInt(d -> {
+              var i = ordem.indexOf(d.getPeriodicidade());
+              return i < 0 ? Integer.MAX_VALUE : i;
+            }))
+            .toList();
+        ponderacoes = periodoService.ponderacoesDoCiclo(tipo);
+      } catch (RuntimeException e) {
+        ordenados = detalhes;
+        ponderacoes = Map.of();
       }
+
+      var periodos = ordenados.stream().map(d -> {
+        var dto = new PeriodoResumoDTO();
+        dto.setUuid(d.getUuid() != null ? d.getUuid().toString() : null);
+        dto.setPeriodicidade(d.getPeriodicidade());
+        dto.setDescricao(rotulos.getOrDefault(d.getPeriodicidade(), d.getPeriodicidade()));
+        dto.setAvaliacaoFinal(d.getAvaliacaoFinal());
+        dto.setAvaliacaoQualitativa(d.getAvaliacaoQualitativa());
+        dto.setEstado(d.getEstado());
+        return dto;
+      }).toList();
+
+      // Nota do ano: soma dos períodos pesada por AVD_PONDERACAO_FINAL.
+      BigDecimal notaFinal = null;
+      for (var d : ordenados) {
+        if (d.getAvaliacaoFinal() == null) {
+          continue;
+        }
+        var peso = ponderacoes.get(d.getPeriodicidade());
+        var contributo = peso != null
+            ? AvaliacaoPeriodoService.aplicarPercentagem(d.getAvaliacaoFinal(), peso)
+            : d.getAvaliacaoFinal();
+        notaFinal = notaFinal == null ? contributo : notaFinal.add(contributo);
+      }
+      notaFinal = AvaliacaoPeriodoService.escala2(notaFinal);
 
       var estadoGrupo = resolveEstadoGrupo(list);
-
-      var notaFinal = (s1 != null ? s1 : BigDecimal.ZERO).add(s2 != null ? s2 : BigDecimal.ZERO);
-      if (s1 == null && s2 == null) {
-        notaFinal = null;
-      }
-
       var qualitativa = notaFinal != null ? resolveQualitativa(escala, notaFinal) : null;
 
-      return avaliacaoListagemMapper.toListagem(base, estadoGrupo, s1, s2, notaFinal, qualitativa);
+      return avaliacaoListagemMapper.toListagem(base, estadoGrupo, periodos, notaFinal, qualitativa);
     }).toList();
 
     var start = Math.min(pageNumber * pageSize, contentAll.size());
@@ -310,11 +506,10 @@ public class AvaliacaoService {
       List<ParamObjetivoEntity> params,
       Map<Long, ParamObjetivoEntity> mapParamObjectives,
       DefinicaoObjectivoDTO dto,
-      ParamObjetivoDetEntity det) {
+      ParamObjetivoDetEntity det,
+      String manualDescricao) {
     if (params == null)
       return;
-
-    //var manualDescricao = resolverDescricaoManual(institId, seccaoId, cargoId, carrPccsId);
 
     dto.getObjectivos().forEach(obj -> {
       var p = mapParamObjectives.get(obj.getParamId());
@@ -327,8 +522,14 @@ public class AvaliacaoService {
       e.setParamObjetivo(p);
       e.setNumeroOrdem(p.getNumeroOrdem());
       e.setAbrangencia(p.getAbrangencia());
-      e.setObjectivos("INDIVIDUAL".equalsIgnoreCase(p.getAbrangencia()) ? obj.getObjectivo() : p.getDescricao());
-      e.setKpi("INDIVIDUAL".equalsIgnoreCase(p.getAbrangencia()) ? obj.getKpi() : p.getKpi());
+      // Spec: na abrangência INDIVIDUAL a descrição vem do manual de funções do cargo;
+      // nas restantes vem da parametrização. O que o ecrã enviar só serve de recurso
+      // quando não há manual configurado para aquele cargo.
+      var individual = "INDIVIDUAL".equalsIgnoreCase(p.getAbrangencia());
+      e.setObjectivos(individual
+          ? primeiroPreenchido(manualDescricao, obj.getObjectivo(), p.getDescricao())
+          : p.getDescricao());
+      e.setKpi(individual ? primeiroPreenchido(obj.getKpi(), p.getKpi()) : p.getKpi());
       e.setMeta(obj.getMeta());
       e.setPonderacao(p.getPonderacao());
       objectivoRepository.save(e);
@@ -345,7 +546,8 @@ public class AvaliacaoService {
       e.setParamObjetivo(p);
       e.setNumeroOrdem(p.getNumeroOrdem());
       e.setAbrangencia(p.getAbrangencia());
-      e.setDescricao(obj.getCompetencia());
+      // Spec: "Preenchido apartir de Tabela RH_T_PARAM_MFUNCAO, CUJO cargo = cargo do colaborador"
+      e.setDescricao(primeiroPreenchido(manualDescricao, obj.getCompetencia(), p.getDescricao()));
       e.setPonderacao(p.getPonderacao());
       e.setComponente(p.getComponente());
       e.setPeso(det.getPesoComportamentais());
@@ -363,7 +565,7 @@ public class AvaliacaoService {
       e.setParamObjetivo(p);
       e.setNumeroOrdem(p.getNumeroOrdem());
       e.setAbrangencia(p.getAbrangencia());
-      e.setDescricao(obj.getCompetencia());
+      e.setDescricao(primeiroPreenchido(manualDescricao, obj.getCompetencia(), p.getDescricao()));
       e.setPonderacao(p.getPonderacao());
       e.setComponente(p.getComponente());
       e.setPeso(det.getPesoTecnica());
@@ -440,6 +642,31 @@ public class AvaliacaoService {
     }*/
   }
 
+  /**
+   * O cargo a usar para procurar o manual de funções.
+   *
+   * <p>A spec diz "cujo cargo = cargo do colaborador", por isso lê-se da relação laboral
+   * corrente (EST_ACT_ADM = 1). O cargo do formulário só entra quando o colaborador não
+   * tem relação corrente — caso em que é a única indicação disponível.</p>
+   */
+  private Long cargoDoColaborador(UUID funUuid, Long cargoDoFormulario) {
+    return relacaoLaboralRepository
+        .findFirstByFuncionarioUuidAndEstActAdm(funUuid.toString(), 1L)
+        .map(RhVRelacaoLaboralEntity::getCargoId)
+        .filter(java.util.Objects::nonNull)
+        .orElse(cargoDoFormulario);
+  }
+
+  /** O primeiro valor com texto, pela ordem dada. */
+  private String primeiroPreenchido(String... valores) {
+    for (var v : valores) {
+      if (StringUtils.hasText(v)) {
+        return v;
+      }
+    }
+    return null;
+  }
+
   private String resolverDescricaoManual(Long institId, Long seccaoId, Long cargoId, Long carrPccsId) {
     if (institId == null || cargoId == null) {
       return null;
@@ -494,18 +721,18 @@ public class AvaliacaoService {
     return p.getSeccaoId() == null || seccaoId != null;
   }
 
+  /**
+   * Estado do grupo: 'C' se alguma das avaliações do ano já está concluída, 'P' se alguma
+   * está em curso, 'A' caso contrário. Quem decide o 'C' é o
+   * {@code ProcessoAvaliacaoService}, que o marca quando todos os períodos do ciclo têm nota.
+   */
   private String resolveEstadoGrupo(List<AvaliacaoEntity> list) {
-    // Ano completo: 2º semestre concluído (C) — independente do estado do 1º
-    boolean sem2Concluido = list.stream()
-        .anyMatch(a -> "2".equals(a.getSemestre()) && "C".equalsIgnoreCase(a.getEstado()));
-    if (sem2Concluido)
+    if (list.stream().anyMatch(a -> "C".equalsIgnoreCase(a.getEstado()))) {
       return "C";
-
-    // Parcial: 1º semestre avaliado mas sem 2º semestre concluído
-    boolean anyP = list.stream().anyMatch(a -> "P".equalsIgnoreCase(a.getEstado()));
-    if (anyP)
+    }
+    if (list.stream().anyMatch(a -> "P".equalsIgnoreCase(a.getEstado()))) {
       return "P";
-
+    }
     return "A";
   }
 
